new proj/src/objects/GE_ES_Custom_Clone_Detail__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Custom_Clone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Clone</label>
        <referenceTo>GE_ES_Custom_Clone__c</referenceTo>
        <relationshipLabel>Custom Clone Details</relationshipLabel>
        <relationshipName>Custom_Clone_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom Clone Details</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Custom Clone Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Clone Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>